package PAI.repository.studyPlanRepository;

import PAI.domain.studyPlan.StudyPlan;

import java.util.List;

public interface IStudyPlanListFactory {

    List<StudyPlan> newArrayList();

}
