@startuml

skinparam linetype ortho

class US27_DDD_RegisterAProgrammeInTheSystemIncludingTheStudyPlan {
    -_programmeDDDList: ProgrammeRepository
    -_studyPlanDDDRepo: IStudyPlanDDDRepository
    +US27_DDD_RegisterAProgrammeInTheSystemIncludingTheStudyPlan(IProgrammeDDDRepository programmeDDDList, IStudyPlanDDDRepository studyPlanDDDRepo)
    +registerAProgrammeDDDInTheSystem(NameWithNumbersAndSpecialChars name, Acronym acronym, QuantEcts quantityOfEcts, QuantSemesters quantityOfSemesters,
    DegreeTypeID degreeTypeID, DepartmentID departmentID, TeacherID programmeDirectorID): boolean
    +createStudyPlanDDD(ProgrammeID programmeID, Date implementationDate): boolean
}

class "List<Programme>" {}
class "List<StudyPlan>" {}

class DepartmentID <<ValueObject>> {}
class Acronym <<ValueObject>> {
    -Acronym: String
    +Acronym(String acronym)
    +isAcronymInvalid(String acronym)
}
class NameWithNumbersAndSpecialChars <<ValueObject>> {
    -NameWithNumbersAndSpecialChars: String
    +NameWithNumbersAndSpecialChars(String nameWithNumbersAndSpecialChars)
    +isNameInvalid (String name): boolean
    +equals(Object o): boolean
    +getnameWithNumbersAndSpecialChars(): String
}

class ProgrammeID <<ValueObject>> {
    -_progID: String
    +ProgrammeID()
    +getProgrID(): String
    +equals(Object o): boolean
}

class quantEcts <<ValueObject>> {
    -quantityOfEcts: int
    +QuantEcts(int quantityOfEcts)
    +isQuantEctsInvalid(int quantityOfEcts)
    +getQuantEcts()
}

class QuantSemesters <<ValueObject>> {
    -_quantSemesters: int
    +isQuantityOfSemestersValid(int quantityOfSemesters)
    +getQuantityOfSemesters()
}

class DurationInYears <<ValueObject>> {
    -_durationInYears: int
    +DurationInYears (int quantSemester)
    +isQuantSemesterValid (int quantSemester): boolean
    +calculateSemestersInYears(int quantSemester): int
    +getDurationInYears(): int
}

package "Programme Aggregate" {
    class "<<root>>\nProgramme" {
         + Programme(NameWithNumbersAndSpecialChars name, Acronym acronym, \nQuantEcts quantityOfEcts, QuantSemesters quantityOfSemesters, \nDegreeTypeID degreeTypeID, DepartmentID departmentID, TeacherID programmeDirectorID)
         + equals(Object o): boolean
         + isEquals (ProgrammeID programmeID): boolean
         + newProgrammeDirector(TeacherID teacherDirectorID)
         + isInDepartment(departmentID: DepartmentID): boolean
         + getProgrammeID(): ProgrammeID
         + getQuantEcts(): QuantEcts
         + getQuantSemesters(): QuantSemesters
         + hasThisProgrammeName(NameWithNumbersAndSpecialChars name): boolean
         + getAcronym(): Acronym
         + getProgrammeName(): NameWithNumbersAndSpecialChars
         + getDegreeTypeID(): DegreeType_ID
         + getDepartmentID(): DepartmentID
         + getProgrammeDirectorID(): TeacherID
         + identity(): ProgrammeID
         + sameAs(Object object): boolean
    }
}

class ProgrammeRepository {
     -_I_programmeFactory: IProgrammeDDDFactory
     -_programmeRepo: List<Programme>
     -_programmeRepoListFactory: IProgrammeDDDRepositoryListFactory
     +registerProgramme(NameWithNumbersAndSpecialChars name, Acronym acronym, QuantEcts quantityOfEcts, QuantSemesters quantityOfSemesters,
         DegreeTypeID degreeTypeID, DepartmentID departmentID, TeacherID programmeDirectorID): boolean
         +changeProgrammeDirector(ProgrammeID programmeID, TeacherID newDirectorID): boolean
         +getAllProgrammes(): List<Programme>
         +getProgrammeByName(NameWithNumbersAndSpecialChars name): Optional<Programme>
         +getProgrammeByAcronym(Acronym acronym): Programme
         +getAllProgrammeNames(): List<NameWithNumbersAndSpecialChars>
         +save(ProgrammeDDD entity): Programme
         +findAll(): Iterable<Programme>
         +ofIdentity(ProgrammeID id): Optional<Programme>
         +containsOfIdentity(ProgrammeID id): boolean
}

interface IProgrammeRepository {
    +registerProgramme(NameWithNumbersAndSpecialChars name, Acronym acronym, QuantEcts quantityOfEcts, QuantSemesters quantityOfSemesters,
    DegreeTypeID degreeTypeID, DepartmentID departmentID, TeacherID programmeDirectorID): boolean
    +changeProgrammeDirector(ProgrammeID programmeID, TeacherID newDirectorID): boolean
    +getAllProgrammes(): List<Programme>
    +getProgrammeByName(NameWithNumbersAndSpecialChars name): Optional<Programme>
    +getProgrammeByAcronym(Acronym acronym): Programme
    +getAllProgrammeNames(): List<NameWithNumbersAndSpecialChars>
    +save(ProgrammeDDD entity): Programme
    +findAll(): Iterable<Programme>
    +ofIdentity(ProgrammeID id): Optional<Programme>
    +containsOfIdentity(ProgrammeID id): boolean
}

class DegreeType_ID <<ValueObject>> {}

class TeacherID <<ValueObject>> {}



class StudyPlanID <<ValueObject>> {
    -_studyPlanID: UUID
    +getStudyPlanId(): UUID
    +equals(Object o): boolean
    +hashCode(): int
    +toString(): String
}

package "StudyPlan Aggregate" {
    class "<<root>>\nStudyPlan" {
        +StudyPlan(ProgrammeID programmeID, Date implementationDate, \nDurationInYears durationInYears, QuantEcts quantityOfEcts)
        +getQuantityOfEcts(): QuantEcts
        +getProgrammeID(): ProgrammeID
        +equals (Object o): boolean
        +identity(): StudyPlanID
        +sameAs(Object object): boolean
    }
}

class Date <<ValueObject>> {
        -localDate: LocalDate
        +Date(String date)
        +Date(LocalDate localDate)
        +getLocalDate(): LocalDate
        +now(): Date
        +isBefore(Date other): boolean
        +isAfter(Date other): boolean
        +equals(Object o): boolean
        +hashCode(): int

}

interface IStudyPlanRepository {
    +StudyPlanDDDRepository(ProgrammeID programmeID, Date implementationDate, \nDurationInYears durationInYears, QuantEcts quantityOfEcts): boolean
    +createStudyPlan(ProgrammeID programmeID, Date implementationDate, \nDurationInYears durationInYears)
    +getAllStudyPlans(): List<StudyPlan>
    +getAllStudyPlansByProgrammeId(ProgrammeID programmeID): List<StudyPlan>
    +save(StudyPlan studyPlan): StudyPlan
    +findAll(): Iterable<StudyPlan>
    +ofIdentity(StudyPlanID id): Optional<StudyPlan>
    +containsOfIdentity(StudyPlanID id): boolean
}

class StudyPlanRepository {
    -_studyPlanFactory: IStudyPlanFactory
    -_studyplanList: List<StudyPlan>
    +StudyPlanDDDRepository(ProgrammeID programmeID, Date implementationDate, \nDurationInYears durationInYears, QuantEcts quantityOfEcts): boolean
    +createStudyPlan(ProgrammeID programmeID, Date implementationDate, \nDurationInYears durationInYears)
    +getAllStudyPlans(): List<StudyPlan>
    +getAllStudyPlansByProgrammeId(ProgrammeID programmeID): List<StudyPlan>
    +save(StudyPlan studyPlan): StudyPlan
    +findAll(): Iterable<StudyPlan>
    +ofIdentity(StudyPlanID id): Optional<StudyPlan>
    +containsOfIdentity(StudyPlanID id): boolean
}

interface IStudyPlanListFactory {
    +newArrayList(): List<StudyPlan>
}

class StudyPlanListFactoryImpl {
    +newArrayList(): List<StudyPlan>
}

class StudyPlanFactoryImpl {
    +newStudyPlan(ProgrammeID programmeID, Date implementationDate, \nDurationInYears durationInYears, QuantEcts quantityOfEcts): StudyPlan
}

interface IStudyPlanFactory {
    +newStudyPlan(ProgrammeID programmeID, Date implementationDate, \nDurationInYears durationInYears, QuantEcts quantityOfEcts): StudyPlan
}

interface IProgrammeRepositoryListFactory {
    +newProgrammeArrayList(): List<Programme>
    +copyProgrammeArrayList(List<ProgrammeDDD> list): List<Programme>
}

class ProgrammeRepositoryListFactoryImpl {
    +newProgrammeArrayList(): List<Programme>
    +copyProgrammeArrayList(List<ProgrammeDDD> list): List<Programme>
}

interface IProgrammeFactory {
    registerProgramme (NameWithNumbersAndSpecialChars name, Acronym acronym, \nQuantEcts quantityOfEcts, QuantSemesters quantityOfSemesters, DegreeTypeID degreeTypeID, \nDepartmentID departmentID, TeacherID programmeDirectorID): Programme
}

class ProgrammeFactoryImpl {
    registerProgramme (NameWithNumbersAndSpecialChars name, Acronym acronym, \nQuantEcts quantityOfEcts, QuantSemesters quantityOfSemesters, DegreeTypeID degreeTypeID, \nDepartmentID departmentID, TeacherID programmeDirectorID): Programme
}

US27_DDD_RegisterAProgrammeInTheSystemIncludingTheStudyPlan "1" ..> "1" IProgrammeRepository
US27_DDD_RegisterAProgrammeInTheSystemIncludingTheStudyPlan "1" .right.> "1   " IStudyPlanRepository
IStudyPlanRepository <|.. StudyPlanRepository
IStudyPlanRepository ..> IStudyPlanListFactory
IStudyPlanListFactory <|.. StudyPlanListFactoryImpl
IStudyPlanListFactory ..> "List<StudyPlan>" : "<<creates>>"
IStudyPlanRepository --> "List<StudyPlan>"
IStudyPlanRepository ..> IStudyPlanFactory
IStudyPlanFactory <|.. StudyPlanFactoryImpl
IStudyPlanFactory ..> "<<root>>\nStudyPlan" : "<<creates>>"
"List<StudyPlan>" --> "<<root>>\nStudyPlan"
"<<root>>\nStudyPlan" "*" --> "1" ProgrammeID : refers to
IProgrammeRepository <|.. ProgrammeRepository
IProgrammeRepository ..> IProgrammeRepositoryListFactory
IProgrammeRepositoryListFactory <|.. ProgrammeRepositoryListFactoryImpl
IProgrammeRepositoryListFactory ..> "List<Programme>" : "<<creates>>"
IProgrammeRepository --> "List<Programme>"
IProgrammeRepository ..> IProgrammeFactory
IProgrammeFactory <|.. ProgrammeFactoryImpl
IProgrammeFactory ..> "<<root>>\nProgramme" : "<<creates>>"
"List<Programme>" --> "<<root>>\nProgramme"
"<<root>>\nProgramme" "*" --> "1" TeacherID : "is directed"
"<<root>>\nProgramme" "*" --> "1" DepartmentID : "belongs to"
"<<root>>\nProgramme" "*" --> "1" DegreeType_ID : "has"
"<<root>>\nProgramme" "*" --> "1" QuantSemesters : "has"
"<<root>>\nProgramme" "*" --> "1" quantEcts : "has"
"<<root>>\nProgramme" "*" --> "1" Acronym : "has"
"<<root>>\nProgramme" "*" --> "1" NameWithNumbersAndSpecialChars : "has"
"<<root>>\nProgramme" "*" --> "1" ProgrammeID : "has"
"<<root>>\nStudyPlan" "*" --> "1" StudyPlanID: "has"
"<<root>>\nStudyPlan" "*" --> "1" DurationInYears: "has"
"<<root>>\nStudyPlan" "*" --> "1" Date: "Is Implemented at"
"<<root>>\nStudyPlan" "*" --> "0.1" Date: "Ends at"
@enduml